[package]
name = "seccomp-pledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seccompiler = { version = "0.3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
optional-field = "0.1.3"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1
opt-level = 2